--- a/src/main/webapp/WEB-INF/views/profile/profile.html
+++ b/src/main/webapp/WEB-INF/views/profile/profile.html
@@ -132,6 +132,9 @@
                     </table>
                 </div>
             </div>
+            <form action="/auth/logout" method="POST">
+                <button style="margin: 20px 20px 10px 70px; border-radius: 20px;">Выйти</button>
+            </form>
 
 
             <footer id="footer">
