--- a/src/main/webapp/WEB-INF/views/flat/edit.html
+++ b/src/main/webapp/WEB-INF/views/flat/edit.html
@@ -5,49 +5,39 @@
     <title>Title</title>
 </head>
 <body>
+<form th:method="POST" th:action="@{/flat/{id}/edit(id=${flat.getId()})}" th:object="${flat}">
 
-<form th:method="POST" th:action="@{/profile/{id}/edit(id=${user.getId()})}" th:object="${user}">
-    <label for="email">Enter email: </label>
-    <input type="email" th:field="*{email}" id="email"/>
-    <div style="color:#ff0000" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">email Error</div>
+    <label for="flatNumber">Enter Номер квартирі: </label>
+    <input type="text" th:field="*{flatNumber}" id="flatNumber"/>
+    <div style="color:#ff0000" th:if="${#fields.hasErrors('flatNumber')}"  th:errors="*{flatNumber}">email Error</div>
     <br/>
-    <label for="password">Enter password: </label>
-    <input type="text" th:field="*{password}" id="password"/>
-    <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</div>
+    <label for="square">Enter Площадь: </label>
+    <input type="text" th:field="*{square}" id="square"/>
+    <div style="color:#ff0000" th:if="${#fields.hasErrors('square')}"  th:errors="*{square}">email Error</div>
     <br/>
-    <label for="firstName">Enter firstName: </label>
-    <input type="text" th:field="*{firstName}" id="firstName"/>
-    <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">password Error</div>
+    <label for="bankBook">Enter Лицевой счёт: </label>
+    <input type="text" th:field="*{bankBook}" id="bankBook"/>
+    <div style="color:#ff0000" th:if="${#fields.hasErrors('bankBook')}"  th:errors="*{bankBook}">email Error</div>
     <br/>
-    <label for="lastName">Enter lastName: </label>
-    <input type="text" th:field="*{lastName}" id="lastName"/>
-    <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">password Error</div>
+    <label for="house">Enter Адресс дома: </label>
+    <input type="text" th:field="*{house.address}" id="house"/>
+    <div style="color:#ff0000" th:if="${#fields.hasErrors('house.address')}"  th:errors="*{house.address}">email Error</div>
     <br/>
-    <label for="middleName">Enter middleName: </label>
-    <input type="text" th:field="*{middleName}" id="middleName"/>
-    <div style="color:red" th:if="${#fields.hasErrors('middleName')}" th:errors="*{middleName}">password Error</div>
+    <label for="user">Enter email: </label>
+    <input type="text" th:field="*{user.email}" id="user"/>
+    <div style="color:#ff0000" th:if="${#fields.hasErrors('user')}"  th:errors="*{user.email}">email Error</div>
     <br/>
-    <input type="radio"  th:field="*{role}" value="USER" /> USER<Br>
-    <input type="radio" th:field="*{role}"  value="ADMIN" /> ADMIN<Br>
+    <label for="floor">Enter Номер этажа: </label>
+    <input type="text" th:field="*{floor.floorNumber}" id="floor"/>
+    <div style="color:red" th:if="${#fields.hasErrors('floor')}" th:errors="*{floor.floorNumber}">password Error</div>
     <br/>
-    <input type="radio"  th:field="*{status}" value="ACTIVE" /> ACTIVE<Br>
-    <input type="radio" th:field="*{status}"  value="BANNED" /> BANNED<Br>
-    <div style="color:red" th:if="${#fields.hasErrors('status')}" th:errors="*{status}">password Error</div>
+    <label for="section">Enter номер секции: </label>
+    <input type="text" th:field="*{section.sectionNumber}" id="section"/>
+    <div style="color:red" th:if="${#fields.hasErrors('section')}" th:errors="*{section}">section Error</div>
     <br/>
-    <label for="phone">Enter phone: </label>
-    <input type="text" th:field="*{phone}" id="phone"/>
-    <div style="color:red" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">password Error</div>
-    <br/>
-    <label for="viber">Enter viber: </label>
-    <input type="text" th:field="*{viber}" id="viber"/>
-    <div style="color:red" th:if="${#fields.hasErrors('viber')}" th:errors="*{middleName}">password Error</div>
-    <br/>
-    <label for="telegram">Enter telegram: </label>
-    <input type="text" th:field="*{telegram}" id="telegram"/>
-    <div style="color:red" th:if="${#fields.hasErrors('telegram')}" th:errors="*{telegram}">password Error</div>
-    <br/>
+    <input type="submit" value="update!"/>
+</form>
 
-    <input type="submit" value="Update!"/>
 
 </form>
 </body>
