--- a/src/main/webapp/WEB-INF/views/tariff/create.html
+++ b/src/main/webapp/WEB-INF/views/tariff/create.html
@@ -1,10 +1,103 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <title>TEST</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <link th:href = "@{/styles/bootstrap.css}"  rel="stylesheet">
+    <link th:href = "@{/styles/bootstrap-responsive.css}"   rel="stylesheet">
+    <link th:href = "@{/styles/base.css}"   rel="stylesheet">
+    <link th:href = "@{/styles/flexslider.css}"   rel="stylesheet">
+    <link th:href = "@{/styles/prettyPhoto.css}" rel="stylesheet">
+    <link th:href = "@{/styles/style.css}"   rel="stylesheet">
+    <link th:href = "@{/styles/lk.css}"   rel="stylesheet">
+    <link th:href = "@{/styles/font-awesome.min.css}"  href="/static/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="screen">
+    <link th:href = "@{/styles/ico/favicon.ico}"  rel="shortcut icon" href="/static/ico/favicon.ico">
 </head>
+
 <body>
+
+<div id="pattern_bg"></div>
+<div id="zatemnenie">
+    <?php include 'login.php';?>
+
+</div>
+
+<div id="main_wrapper">
+    <div class="main_wrapper_inner">
+
+    </div>
+</div>
+</body>
+<div class="header_top_second">
+
+    <div class="container header_top_second_inner">
+        <div class="row">
+            <div class="span12">
+                <a href="/" class="logotype1"><span>ОСМД</span><div><b>"КАРУСЕЛЬ"</b></div></a>
+                <div class="header_top_inner1">
+                    <div class="main_menu">
+                        <nav id="dropdown">
+                            <ul class="sf-menu clearfix">
+                                <li class="current"><a href="/" class="trigger"><span>Главная</span></a>
+                                </li>
+                                <li><a href="/news/list" class="trigger"><span>Новости</span></a>
+                                </li>
+                                <li><a th:href="@{/profile/}" class="trigger" th:method="GET"><span>Личный кабинет</span></a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+
+                <!--<form>
+						<fieldset class="search-form">
+							<input class="search" type="text" placeholder="Поиск...">
+							<div class="search-button" type="Найти"></div>
+						</fieldset>
+				</form>-->
+            </div>
+        </div>
+    </div>
+    <div class="clear"></div>
+</div>
+
+
+<div class="content">
+
+    <div class="content_wrapper">
+        <div class="content_wrapper_inner">
+            <div class="clear"></div>
+        </div>
+    </div>
+</div>
+
+<!-- Боковое меню -->
+<div class="sidenav">
+    <a href="kvit.php">Квитанции</a>
+    <br>
+    <a th:href="@{/tariff/}">Тарифы</a>
+    <br>
+    <a href="#" >Касса</a>
+    <br>
+    <a href="#">Квартиры</a>
+    <br>
+    <a href="#">Владельцы квартир</a>
+    <br>
+    <a href="#">Дома</a>
+    <br>
+    <a href="/news/list">Новости</a>
+    <br>
+    <a href="/meter/list">Показания счётчиков</a>
+    <br>
+    <a th:href="@{/profile/}">Профиль</a>
+</div>
+<!-- Боковое меню -->
+
+<!-- Создание тарифа -->
 <form th:method="POST" th:action="@{/tariff}" th:object="${tariff}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{name}" id="name"/>
@@ -17,11 +110,54 @@
     <label for="toPay">Enter to_pay: </label>
     <input type="text" th:field="*{toPay}" id="toPay"/>
     <div style="color:red" th:if="${#fields.hasErrors('toPay')}" th:errors="*{toPay}">password Error</div>
-
-
     <input type="submit" value="Create!"/>
 </form>
+<!-- Создание тарифа -->
 
+<footer id="footer">
+    <div class="container">
+        <div class="footer_inner">
+            <div class="row">
 
-</body>
+                <div class="span3 widget">
+                    <h4 class="widget_title">О нас</h4>
+                    <div class="widget_text">
+                        <span class="foot_title">Название компании</span><br/>
+                        <p>ХЗ</p>
+                        <div class="top10 clearfix"><p>ХЗ
+                            ХЗ</p> </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+
+                <div class="span3 widget">
+                    <div class="clear"></div>
+                </div>
+
+                <div class="span3 widget">
+                    <div class="clear"></div>
+                </div>
+
+                <div class="span3 widget">
+                    <h4 class="widget_title">Контакты</h4>
+                    <div class="widget_text">
+                        <div class="world_map">
+                            <div class="icon_home sub_text2"> 27 Street, Road Norh, New York </div>
+                            <div class="icon_tele2 sub_text2"> +7 (201) 9-556-700</div>
+                            <div class="icon_fax sub_text2"> +7 (201) 9-556-707</div>
+                            <div class="icon_mail sub_text2"> <a href="#">support@managov.com</a></div>
+                            <div class="icon_time sub_text2"> 8 AM -  5 PM  Always  24/7</div>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</footer>
+</div>
+</div>
+</div>
 </html>
+
