--- a/src/main/webapp/WEB-INF/views/tariff/create.html
+++ b/src/main/webapp/WEB-INF/views/tariff/create.html
@@ -71,13 +71,10 @@
     <div class="content_wrapper">
         <div class="content_wrapper_inner">
             <div class="clear"></div>
-        </div>
-    </div>
-</div>
 
 <!-- Боковое меню -->
 <div class="sidenav">
-    <a href="kvit.php">Квитанции</a>
+    <a href="/invoice">Квитанции</a>
     <br>
     <a th:href="@{/tariff/}">Тарифы</a>
     <br>
