--- a/src/main/webapp/WEB-INF/views/profile/profile.html
+++ b/src/main/webapp/WEB-INF/views/profile/profile.html
@@ -22,14 +22,72 @@
 
 <div id="pattern_bg"></div>
 <div id="zatemnenie">
-    <?php include 'login.php';?>
+
 
 </div>
 
 <div id="main_wrapper">
     <div class="main_wrapper_inner"></div>
 </div>
+<!-- prof-red -->
+<div id="prof-red">
+    <a class="hiddenanchor" id="zatemnenie"></a>
+    <a class="hiddenanchor" id="tologin"></a>
+    <div id="wrapper">
+        <div id="prod-red2" class="animate form">
+            <a href="#close_window" class="close_window" style="position: absolute;right: 10px;top: 4px;border: none;font-size: 20px;">X</a>
+            <form th:method="POST" th:action="@{/profile/{id}/edit(id=${user.getId()})}" th:object="${user}">
+                <label class="prod-redlable" for="email">Enter email: </label>
+                <input style="margin: 0% 0% 4px 0%; max-width:30%;" type="email" th:field="*{email}" id="email"/>
+                <div style="color:#ff0000" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">email Error</div>
+                <br/>
+                <label style="margin: -13% 0% 0% 50%;" class="prod-redlable" for="password">Enter password: </label>
+                <input style="margin: 0% 0% 4px 50%; max-width:30%;" type="text" th:field="*{password}" id="password"/>
+                <div style="color:red; margin: 0% 0% 0% 50%; max-width:25%;" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</div>
+                <br/>
+                <label class="prod-redlable" for="firstName">Enter firstName: </label>
+                <input style="margin: 0% 0% 4px 0%; max-width:30%;" type="text" th:field="*{firstName}" id="firstName"/>
+                <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">password Error</div>
+                <br/>
+                <label class="prod-redlable" for="lastName">Enter lastName: </label>
+                <input style="margin: 0% 0% 4px 0%; max-width:30%;" type="text" th:field="*{lastName}" id="lastName"/>
+                <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">password Error</div>
+                <br/>
+                <label class="prod-redlable" for="middleName">Enter middleName: </label>
+                <input style="margin: 0% 0% 4px 0%; max-width:30%;" type="text" th:field="*{middleName}" id="middleName"/>
+                <div style="color:red" th:if="${#fields.hasErrors('middleName')}" th:errors="*{middleName}">password Error</div>
+                <br/>
+                <br/>
+                <label style="margin: -40% 0% 0% 50%;" class="prod-redlable" for="phone">Enter phone: </label>
+                <input style="margin: 0% 0% 4px 50%; max-width:30%;" type="text" th:field="*{phone}" id="phone" placeholder="+375 (XX) XXX-XX-XX"/>
+                <div style="color:red; margin: 0% 0% 0% 50%; max-width:25%;" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">password Error</div>
+                <br/>
+                <label style="margin: 0% 0% 0% 50%;" class="prod-redlable" for="viber">Enter viber: </label>
+                <input style="margin: 0% 0% 4px 50%; max-width:30%;" type="text" th:field="*{viber}" id="viber"/>
+                <div style="color:red; margin: 0% 0% 0% 50%; max-width:25%;" th:if="${#fields.hasErrors('viber')}" th:errors="*{middleName}">password Error</div>
+                <br/>
+                <label style="margin: 0% 0% 0% 50%;" class="prod-redlable" for="telegram">Enter telegram: </label>
+                <input style="margin: 0% 0% 4px 50%; max-width:30%;" type="text" th:field="*{telegram}" id="telegram"/>
+                <div style="color:red; margin: 0% 0% 0% 50%; max-width:25%;" th:if="${#fields.hasErrors('telegram')}" th:errors="*{telegram}">password Error</div>
+                <br/>
+                <select style="margin: 0% 0% 0% 0%;">
+                    <option type="radio"  th:field="*{role}" value="USER" /> USER<Br>
+                    <option type="radio" th:field="*{role}"  value="ADMIN" /> ADMIN<Br>
+                </select>
+                <br/>
+                <select style="margin: -7% 0% 0% 50%;">
+                    <option type="radio"  th:field="*{status}" value="ACTIVE" /> ACTIVE<Br>
+                    <option type="radio" th:field="*{status}"  value="BANNED" /> BANNED<Br>
+                </select>
 
+                <input style="margin: 3% 0% 0% 0%;" type="submit" value="Update!"/>
+
+            </form>
+        </div>
+    </div>
+
+</div>
+<!-- prof-red -->
 </body>
 <div class="header_top_second">
     <div class="container header_top_second_inner">
@@ -63,7 +121,7 @@
         <div class="content_wrapper_inner">
             <div class="clear"></div>
             <div class="sidenav">
-                <a href="kvit.php">Квитанции</a>
+                <a href="/invoice">Квитанции</a>
                 <br>
                 <a th:href="@{/tariff/}">Тарифы</a>
                 <br>
@@ -111,7 +169,10 @@
                             <th th:text="${user.role.name()}">4</th>
                         </tr>
                     </table>
-                    <a th:href="@{/profile/{id}/edit(id=${user.getId()})}"><button style="margin: 20px 20px 10px 70px; border-radius: 20px;">Редактировать</button></a>
+
+<!--                    <a th:href="@{/profile/{id}/edit(id=${user.getId()})}"><button style="margin: 20px 20px 10px 70px; border-radius: 20px;">Редактировать</button></a>-->
+                    <a href="#prof-red"><button style="margin: 20px 20px 10px 70px; border-radius: 20px;">Редактировать</button></a>
+
                 </div>
                 <div class="prof4">
                     <h5>Описание квартиры</h5>
